File .travis.yml was updated.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ language: cpp
 
 script: make
 
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - g++-7
+
 
