--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,9 @@ addons:
         packages:
             - g++-7
 
+env:
+    - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
