--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ addons:
         packages:
             - g++-7
 
-env:
-    - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-
-before_install:
-    - eval "${MATRIX_EVAL}"
-
+before_script:
+    - export CXX=${g++-7}
+  
