Class Frame was created

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,6 +23,7 @@ VPATH := ../src/
 # Source files (listed in alphabetical order)
 
 SOURCE :=
+SOURCE += frame.cpp
 SOURCE += main.cpp
 SOURCE += page.cpp
 SOURCE += unixfile.cpp
