Class HeapFile was created

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,6 +26,7 @@ SOURCE :=
 SOURCE += buffermgr.cpp
 SOURCE += diskspacemgr.cpp
 SOURCE += frame.cpp
+SOURCE += heapfile.cpp
 SOURCE += main.cpp
 SOURCE += page.cpp
 SOURCE += record.cpp
