--- a/src/Makefile
+++ b/src/Makefile
@@ -28,10 +28,12 @@ SOURCE += diskspacemgr.cpp
 SOURCE += frame.cpp
 SOURCE += heapfile.cpp
 SOURCE += heappage.cpp
+SOURCE += heappagehdr.cpp
 SOURCE += main.cpp
 SOURCE += page.cpp
 SOURCE += record.cpp
 SOURCE += recordid.cpp
+SOURCE += slot.cpp
 SOURCE += unixfile.cpp
 
 #Object files
