--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -37,6 +37,8 @@ SOURCE += diskspacemgr.cpp
 SOURCE += diskspacemgr_test.cpp
 SOURCE += frame.cpp
 SOURCE += frame_test.cpp
+SOURCE += heappage.cpp
+SOURCE += heappage_test.cpp
 SOURCE += heappagehdr.cpp
 SOURCE += heappagehdr_test.cpp
 SOURCE += main.cpp
