--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -33,6 +33,8 @@ VPATH += ../../src
 SOURCE :=
 SOURCE += buffermgr.cpp
 SOURCE += buffermgr_test.cpp
+SOURCE += dirpage.cpp
+SOURCE += dirpage_test.cpp
 SOURCE += diskspacemgr.cpp
 SOURCE += diskspacemgr_test.cpp
 SOURCE += frame.cpp
