--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -41,6 +41,8 @@ SOURCE += diskspacemgr.cpp
 SOURCE += diskspacemgr_test.cpp
 SOURCE += frame.cpp
 SOURCE += frame_test.cpp
+SOURCE += heapfile.cpp
+SOURCE += heapfile_test.cpp
 SOURCE += heappage.cpp
 SOURCE += heappage_test.cpp
 SOURCE += heappagehdr.cpp
@@ -49,6 +51,7 @@ SOURCE += main.cpp
 SOURCE += page.cpp
 SOURCE += page_test.cpp
 SOURCE += record.cpp
+SOURCE += recordid.cpp
 SOURCE += slot.cpp
 SOURCE += unixfile.cpp
 SOURCE += unixfile_test.cpp
