--- a/src/Makefile
+++ b/src/Makefile
@@ -23,19 +23,20 @@ VPATH := ../src/
 # Source files (listed in alphabetical order)
 
 SOURCE :=
-SOURCE += buffermgr.cpp
-SOURCE += dir.cpp
-SOURCE += dirpage.cpp
-SOURCE += diskspacemgr.cpp
-SOURCE += frame.cpp
-SOURCE += heapfile.cpp
-SOURCE += heappage.cpp
-SOURCE += heappagehdr.cpp
+# SOURCE += buffermgr.cpp
+# SOURCE += dir.cpp
+# SOURCE += dirpage.cpp
+SOURCE += diskblock.cpp
+# SOURCE += diskspacemgr.cpp
+# SOURCE += frame.cpp
+# SOURCE += heapfile.cpp
+# SOURCE += heappage.cpp
+# SOURCE += heappagehdr.cpp
 SOURCE += main.cpp
-SOURCE += page.cpp
-SOURCE += record.cpp
-SOURCE += recordid.cpp
-SOURCE += slot.cpp
+# SOURCE += page.cpp
+# SOURCE += record.cpp
+# SOURCE += recordid.cpp
+# SOURCE += slot.cpp
 SOURCE += unixfile.cpp
 
 #Object files
