Tests for DiskSpaceMgr

--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -37,8 +37,9 @@ SOURCE :=
 #SOURCE += dir_test.cpp
 #SOURCE += dirpage.cpp
 #SOURCE += dirpage_test.cpp
-#SOURCE += diskspacemgr.cpp
-#SOURCE += diskspacemgr_test.cpp
+SOURCE += diskblock.cpp
+SOURCE += diskspacemgr.cpp
+SOURCE += diskspacemgr_test.cpp
 #SOURCE += frame.cpp
 #SOURCE += frame_test.cpp
 #SOURCE += heapfile.cpp
@@ -50,6 +51,7 @@ SOURCE :=
 SOURCE += main.cpp
 #SOURCE += page.cpp
 #SOURCE += page_test.cpp
+SOURCE += pageid.cpp
 #SOURCE += record.cpp
 #SOURCE += recordid.cpp
 #SOURCE += slot.cpp
