Test for Page removed

--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -48,8 +48,7 @@ SOURCE += frame.cpp
 #SOURCE += heappagehdr.cpp
 #SOURCE += heappagehdr_test.cpp
 SOURCE += main.cpp
-#SOURCE += page.cpp
-#SOURCE += page_test.cpp
+SOURCE += page.cpp
 SOURCE += pageid.cpp
 #SOURCE += record.cpp
 #SOURCE += recordid.cpp
