Test for DirPage

--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -37,7 +37,7 @@ SOURCE += dir.cpp
 #SOURCE += dir_test.cpp
 SOURCE += dirpage.cpp
 SOURCE += dirslot.cpp
-#SOURCE += dirpage_test.cpp
+SOURCE += dirpage_test.cpp
 SOURCE += diskblock.cpp
 SOURCE += diskspacemgr.cpp
 SOURCE += diskspacemgr_test.cpp
