Test for Dir are not available

--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -34,7 +34,7 @@ SOURCE :=
 SOURCE += buffermgr.cpp
 SOURCE += buffermgr_test.cpp
 SOURCE += dir.cpp
-#SOURCE += dir_test.cpp
+SOURCE += dir_test.cpp
 SOURCE += dirpage.cpp
 SOURCE += dirslot.cpp
 SOURCE += dirpage_test.cpp
