--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -33,6 +33,8 @@ VPATH += ../../src
 SOURCE :=
 SOURCE += buffermgr.cpp
 SOURCE += buffermgr_test.cpp
+SOURCE += db.cpp
+SOURCE += db_test.cpp
 SOURCE += dir.cpp
 SOURCE += dir_test.cpp
 SOURCE += dirpage.cpp
