--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -45,7 +45,7 @@ SOURCE += diskspacemgr.cpp
 SOURCE += diskspacemgr_test.cpp
 SOURCE += frame.cpp
 SOURCE += heapfile.cpp
-#SOURCE += heapfile_test.cpp
+SOURCE += heapfile_test.cpp
 SOURCE += heappage.cpp
 SOURCE += heappage_test.cpp
 SOURCE += main.cpp
