Test for Scaner

--- a/tests/src/Makefile
+++ b/tests/src/Makefile
@@ -54,6 +54,8 @@ SOURCE += pageoffset.cpp
 SOURCE += pageid.cpp
 SOURCE += record.cpp
 SOURCE += recordid.cpp
+SOURCE += scaner.cpp
+SOURCE += scaner_test.cpp
 SOURCE += slot.cpp
 SOURCE += slotid.cpp
 SOURCE += unixfile.cpp
