--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,8 +13,8 @@ scaner_test.cpp
 unixfile_test.cpp
 )
 
-target_include_directories(test.x PUBLIC ../googletest/include ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(test.x PUBLIC ${PROJECT_SOURCE_DIR}/3rdparty/googletest/include ${PROJECT_SOURCE_DIR}/src)
 
 
-find_library(GG_LIB gtest.a HINT ${PROJECT_SOURCE_DIR}/tests/googletest)
+find_library(GG_LIB gtest.a HINT ${PROJECT_SOURCE_DIR}/3rdparty/googletest)
 target_link_libraries(test.x ${GG_LIB} pthread lib-romzdb)
