--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,9 @@ include(CTest)
 enable_testing(true)
 
 add_subdirectory(3rdparty/googletest)
-add_subdirectory(src)
-add_subdirectory(tests)
+add_subdirectory(src/disk)
+add_subdirectory(src/buffer)
+add_subdirectory(src/hf)
+
+# add_subdirectory(tests)
+
