Create testst for heap file

--- a/src/hf/CMakeLists.txt
+++ b/src/hf/CMakeLists.txt
@@ -2,16 +2,18 @@
 
 
 add_library(romzdb-hf STATIC
-dir.cpp
-dirpage.cpp
-dirslot.cpp
-heapfile.cpp
-heappage.cpp
-pageoffset.cpp
-record.cpp
-recordid.cpp
-slot.cpp
-slotid.cpp
+    db.cpp
+    dir.cpp
+    dirpage.cpp
+    dirslot.cpp
+    heapfile.cpp
+    heappage.cpp
+    pageoffset.cpp
+    record.cpp
+    recordid.cpp
+    scaner.cpp
+    slot.cpp
+    slotid.cpp
 )
 
 target_include_directories( romzdb-hf PRIVATE ../disk ../buffer )
