Use variable in cmake files to define libraries

--- a/src/disk/CMakeLists.txt
+++ b/src/disk/CMakeLists.txt
@@ -1,12 +1,12 @@
 
+set( LIB_NAME romzdb-disk ) 
 
-
-add_library(romzdb-disk STATIC
-diskblock.cpp
-diskspacemgr.cpp
-pageid.cpp
-unixfile.cpp
+add_library( ${LIB_NAME} STATIC
+    diskblock.cpp
+    diskspacemgr.cpp
+    pageid.cpp
+    unixfile.cpp
 )
 
-target_compile_options( romzdb-disk PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
 
