--- a/src/hf/CMakeLists.txt
+++ b/src/hf/CMakeLists.txt
@@ -1,7 +1,7 @@
 
+set( LIB_NAME romzdb-hf )
 
-
-add_library(romzdb-hf STATIC
+add_library( ${LIB_NAME} STATIC
     db.cpp
     dir.cpp
     dirpage.cpp
@@ -16,7 +16,7 @@ add_library(romzdb-hf STATIC
     slotid.cpp
 )
 
-target_include_directories( romzdb-hf PRIVATE ../disk ../buffer )
+target_include_directories( ${LIB_NAME} PRIVATE ../disk ../buffer )
 
-target_compile_options( romzdb-hf PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
 
