--- a/src/buffer/CMakeLists.txt
+++ b/src/buffer/CMakeLists.txt
@@ -1,13 +1,12 @@
 
+set( LIB_NAME romzdb-buffer )
 
-
-add_library(romzdb-buffer STATIC
-buffermgr.cpp
-frame.cpp
-page.cpp
-#pageoffset.cpp
+add_library( ${LIB_NAME} STATIC
+    buffermgr.cpp
+    frame.cpp
+    page.cpp
 )
 
-target_include_directories( romzdb-buffer PRIVATE ../disk )
-target_compile_options( romzdb-buffer PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+target_include_directories( ${LIB_NAME} PRIVATE ../disk )
+target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
 
