Reareange the source code to fit to applied class disk

--- a/src/disk/CMakeLists.txt
+++ b/src/disk/CMakeLists.txt
@@ -2,6 +2,7 @@
 set( LIB_NAME romzdb-disk ) 
 
 add_library( ${LIB_NAME} STATIC
+    disk.cpp
     diskblock.cpp
     diskspacemgr.cpp
     pageid.cpp
