Simplify disk interface

--- a/src/disk/CMakeLists.txt
+++ b/src/disk/CMakeLists.txt
@@ -2,10 +2,9 @@
 set( LIB_NAME romzdb-disk ) 
 
 add_library( ${LIB_NAME} STATIC
-    disk.cpp
     diskblock.cpp
-    diskspacemgr.cpp
     pageid.cpp
+    space.cpp
     unixfile.cpp
 )
 
