Create testst for BitArray class

--- a/tests/disk/CMakeLists.txt
+++ b/tests/disk/CMakeLists.txt
@@ -2,12 +2,13 @@
 set( TEST_NAME test-disk )
 
 add_executable( ${TEST_NAME}
-    space.cpp
+    bitarray.cpp
     main.cpp
+    space.cpp
     unixfile.cpp
 )
 
-target_compile_options( ${TEST_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+target_compile_options( ${TEST_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 )
 
 target_include_directories( ${TEST_NAME} PRIVATE ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} )
 
