Create test for DbFile class

--- a/tests/disk/CMakeLists.txt
+++ b/tests/disk/CMakeLists.txt
@@ -3,6 +3,7 @@ set( TEST_NAME test-disk )
 
 add_executable( ${TEST_NAME}
     bitarray.cpp
+    dbfile.cpp
     main.cpp
     space.cpp
     unixfile.cpp
