Add class DbFieldId

--- a/src/disk/CMakeLists.txt
+++ b/src/disk/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library( ${LIB_NAME} STATIC
     bitarray.cpp
     blockid.cpp
     dbfile.cpp
+    dbfileid.cpp
     diskblock.cpp
     div_ceil.cpp
     pageid.cpp
