Add tests for class DbFieldId

--- a/tests/disk/CMakeLists.txt
+++ b/tests/disk/CMakeLists.txt
@@ -4,6 +4,7 @@ set( TEST_NAME test-disk )
 add_executable( ${TEST_NAME}
     bitarray.cpp
     dbfile.cpp
+    dbfileid.cpp
     main.cpp
     space.cpp
     unixfile.cpp
