--- a/src/buffer/CMakeLists.txt
+++ b/src/buffer/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library( ${LIB_NAME} STATIC
     page.cpp
 )
 
-target_include_directories( ${LIB_NAME} PRIVATE ../disk )
-target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+
+target_include_directories( ${LIB_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src )
+
+target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 )
 
