--- a/src/hf/CMakeLists.txt
+++ b/src/hf/CMakeLists.txt
@@ -16,7 +16,8 @@ add_library( ${LIB_NAME} STATIC
     slotid.cpp
 )
 
-target_include_directories( ${LIB_NAME} PRIVATE ../disk ../buffer )
 
-target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
+target_include_directories( ${LIB_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src )
+
+target_compile_options( ${LIB_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 )
 
