--- a/tests/buffer/CMakeLists.txt
+++ b/tests/buffer/CMakeLists.txt
@@ -2,18 +2,30 @@
 set( TEST_NAME test-buffer )
 
 add_executable( ${TEST_NAME}
-buffermgr.cpp
-main.cpp
+    buffermgr.cpp
+    main.cpp
 )
 
 target_compile_options( ${TEST_NAME} PRIVATE -Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++11 -DNDEBUG )
 
-target_include_directories( ${TEST_NAME} PRIVATE ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} )
+target_include_directories( ${TEST_NAME} PRIVATE 
+    ${gtest_SOURCE_DIR}/include 
+    ${gtest_SOURCE_DIR} 
+    ${PROJECT_SOURCE_DIR}/src 
+)
 
-target_include_directories( ${TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src/disk ${PROJECT_SOURCE_DIR}/src/buffer )
-
-target_link_libraries( ${TEST_NAME} -fprofile-arcs gtest gtest_main pthread romzdb-disk romzdb-buffer )
+target_link_libraries( ${TEST_NAME} 
+    -fprofile-arcs 
+    gtest 
+    gtest_main 
+    pthread 
+    romzdb-disk 
+    romzdb-buffer
+    romzdb-util
+)
 
 add_test( NAME ${TEST_NAME} COMMAND ${TEST_NAME} )
+
+set_tests_properties ( ${TEST_NAME} PROPERTIES DEPENDS test-disk )
 
 
