--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.0)
 project (romzdb)
 
-# SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
+SET( CMAKE_CXX_FLAGS "-Wall -pedantic -pthread -g -O0 -fprofile-arcs -ftest-coverage -std=c++17")
 
 include(CTest)
 enable_testing(true)
