--- a/tests/disk/CMakeLists.txt
+++ b/tests/disk/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable( ${TEST_NAME}
     unixfile.cpp
 )
 
+target_compile_options( ${TEST_NAME} PRIVATE ${ROMZDB_CXX_FLAGS} )
+
 
 target_include_directories( ${TEST_NAME} PRIVATE 
     ${gtest_SOURCE_DIR}/include 
