Remove some file from CMakeLists.txt

--- a/src/hf/CMakeLists.txt
+++ b/src/hf/CMakeLists.txt
@@ -4,8 +4,8 @@ set( LIB_NAME romzdb-hf )
 add_library( ${LIB_NAME} STATIC
     #    db.cpp
     #dir.cpp
-    dirpage.cpp
-    dirslot.cpp
+    # dirpage.cpp
+    # dirslot.cpp
     #heapfile.cpp
     #heappage.cpp
     #pageoffset.cpp
@@ -13,7 +13,7 @@ add_library( ${LIB_NAME} STATIC
     #recordid.cpp
     #scaner.cpp
     #slot.cpp
-    #slotid.cpp
+    slotid.cpp
 )
 
 target_include_directories( ${LIB_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src )
