--- a/tests/hf/CMakeLists.txt
+++ b/tests/hf/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable( ${TEST_NAME}
     #heapfile.cpp
     #heappage.cpp
     main.cpp
+    recordid.cpp
     #scaner.cpp
     slotid.cpp
 )
