Add test for Record class

--- a/tests/hf/CMakeLists.txt
+++ b/tests/hf/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable( ${TEST_NAME}
     heap_file.cpp
     heap_page.cpp
     main.cpp
-    # record.cpp
+    record.cpp
     recordid.cpp
     #scaner.cpp
     slotid.cpp
