Add test for DirPage

--- a/tests/hf/CMakeLists.txt
+++ b/tests/hf/CMakeLists.txt
@@ -3,7 +3,7 @@ set( TEST_NAME test-hf )
 
 add_executable( ${TEST_NAME}
     #    db.cpp
-    # dirpage.cpp
+    dir_page.cpp
     #dir.cpp
     heap_file.cpp
     heap_page.cpp
