--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ enable_testing(true)
 
 add_subdirectory(3rdparty/googletest)
 
+add_subdirectory(src/btree)
 add_subdirectory(src/disk)
 add_subdirectory(src/buffer)
 add_subdirectory(src/hf)
 add_subdirectory(src/util)
 
+add_subdirectory(tests/btree)
 add_subdirectory(tests/disk)
 add_subdirectory(tests/buffer)
 add_subdirectory(tests/hf)
